--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -6,6 +6,7 @@ $charcoal: #2a2a2a;
 // Font colors:
 $charcoal: #2a2a2a;
 $white: #ffffff;
+$lightgrey: #d2cfcf;
 
 @mixin font-awesome($content){
     font-family: "Font Awesome 5 Free";
