--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,7 +22,7 @@ img {
 
 .header {
     background-image: url(assets/image-1.jpeg);
-    height: 100vh;
+    height: 110vh;
     background-size: cover;
 }
 
@@ -36,25 +36,29 @@ img {
         color: white;
         flex: 1 0 40%;
         padding: 0;
+        margin: 0;
         text-align: left;
-        font-weight: 400;
+        letter-spacing: 1px;
+        font-weight: 700;
     }
 
 .nav__list {
         flex: 1 0 60%;
         display: flex;
         justify-content: space-around;
+        align-items: center;
     }
 
 .nav__item {
         display: inline;
-        
     }
 
 .nav__link {
         color: white;
         text-decoration: none;
-        font-size: 2rem;
+        font-size: 1.6rem;
+        text-transform: uppercase;
+        letter-spacing: 1px;
     }
 
 .title {
@@ -68,12 +72,24 @@ img {
     }
 }
 
+.title__h1 {
+    color: white;
+}
+
+.title__h3 {
+    font-size: 2rem;
+    letter-spacing: 1px;
+    font-weight: bold;
+    color: white;
+}
+
 .button {
     color: white;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    letter-spacing: 1.5px;
     display: block;
     background: $red;
-    width: 165px;
+    width: 150px;
     text-align: center;
     text-decoration: none;
     padding: 15px;
@@ -87,7 +103,7 @@ img {
 .about-container {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 100px;
+    padding-bottom: 75px;
     max-width: 900px;
 }
 
@@ -98,7 +114,8 @@ img {
 
 .gallery-container--half {
     flex: 1 0 50%;
-    padding: 50px;
+    padding: 0 50px;
+    
 }
 
 .gallery-cell {
@@ -111,11 +128,23 @@ img {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; 
+}
+
+.gallery-cell--padding-right {
+    padding-right: 60px;
+}
+
+.gallery-cell--padding-left {
+    padding-left: 60px;
 }
 
 .gallery-cell__header {
     padding: 30px 0;
+}
+
+.gallery-cell__img--smaller-width {
+    max-width: 85%;
 }
 
 .info-paragraph {
@@ -127,7 +156,7 @@ img {
 }
 
 .info-paragraph__p {
-    padding: 20px 50px;
+    padding: 20px 35px;
 }
 
 .info-paragraph--half {
@@ -144,7 +173,7 @@ img {
 
 .welcome {
     background: $yellow;
-    padding-bottom: 100px;
+    padding-bottom: 80px;
 }
 
 .button--black {
@@ -152,11 +181,31 @@ img {
     
 }
 
+.button--padding {
+    margin-top: 50px;
+}
+
+.info-paragraph__p--large {
+    font-size: 2rem;
+}
+
+.info-paragraph__p--no-padding {
+    padding:0;
+}
+
 .services {
     padding-bottom: 100px;
 }
 
+.info-paragraph__p--small {
+    font-size: 1.6rem;
+}
 
+.info-paragraph__p--extra-padding {
+    padding: 30px 80px;
+}
+
+// reviews section
 
 .reviews {
     background: $charcoal;
@@ -166,35 +215,38 @@ img {
      padding-bottom: 100px;
 }
 
-.reviews__p {
-    color: white;
-    width: 45%;
-    text-align: center;
-   
-}
-
-.reviews__figure-container {
+.reviews__figure-container{
     position: relative;
 }
 
 .reviews__icon {
-    color: white;
+    color:lightgrey;
     position: absolute;
     font-size: 4rem;
     top: 50%;
+    transform: translateY(-50%);
 }
 
 .reviews__icon--left {
     left: -50px;
 }
 
+.reviews__p {
+    color: white;
+    width: 45%;
+    text-align: center;
+    font-size: 1.8rem;
+    padding-top: 50px;
+    color: $lightgrey;
+}
+
 .reviews__icon--right {
     right: -50px;
 }
 
-
 .reviews__p--italic {
     font-style: italic;
+    padding-top: 20px;
 }
 
 .section-header--white {
@@ -204,7 +256,7 @@ img {
 
 .gallery-cell--thirds {
     flex: 1 0 33%;
-    max-height: 210px;
+    // max-height: 210px;
 }
 
 .gallery-cell--fourths {
@@ -221,8 +273,8 @@ img {
     right: 0;
     left: 0;
     bottom: 0;
+    padding: 40px 30px;
 }
-
 
 .gallery-cell--thirds:hover .gallery-cell__caption--extended{
         display: block;
@@ -230,8 +282,19 @@ img {
 
 .gallery-cell__header--underline {
     border-bottom: 1px solid white;
+    padding-bottom: 15px;
     width: 80%;
     margin: 0 auto;
+    color: white;
+}
+
+.gallery-cell__p {
+    padding-top: 15px;
+    font-size: 1.6rem;
+}
+
+.gallery-cell__p--white {
+    color: white;
 }
 
 .questionForm {
@@ -255,6 +318,7 @@ img {
     text-align: center;
     color: black;
     font-size: 1.6rem;
+    font-family: "Lora";
     
 }
 
@@ -275,7 +339,12 @@ img {
 .stats__icons {
     font-size: 4rem;
     color: $charcoal;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
+}
+
+.stats__p {
+    font-size: 2rem;
+    padding-top: 10px;
 }
 
 .blog {
@@ -296,6 +365,7 @@ img {
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 700;
+    font-size: 1.2rem;
     position: relative;
 }
 
@@ -307,11 +377,11 @@ img {
     top: -1px;
 }
 
-
 .footer {
     background: $charcoal;
     color: white;
-    padding-top: 100px;
+    padding: 100px 0 20px 0;
+    
 }
 
 .footer-container {
@@ -329,6 +399,7 @@ img {
 
 .contact__header {
     padding-bottom: 40px;
+    color: white;
 }
 
 .contact__list {
@@ -376,6 +447,7 @@ img {
 
 .footer-paragraph__header {
     padding-bottom: 40px;
+    color: white;
 }
 
 .footer-paragraph__p {
@@ -400,6 +472,7 @@ img {
 
 .instagram__header {
     padding-bottom: 40px;
+    color: white;
 }
 
 .instagram-container {
@@ -409,8 +482,14 @@ img {
 }
 
 .instagram-container__cell {
-    flex: 1 0 25%;
+    flex: 1 0 calc(25% - 10px);
+    margin-right: 10px;
     margin-bottom: 10px;
+    // margin-bottom: 10px;
+}
+
+.instagram-container__img {
+    width: 100%;
 }
 
 .nav--footer {
@@ -418,13 +497,20 @@ img {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     padding-bottom: 80px;
 }
 
+.nav__logo--footer {
+    align-self: center;
+}
+
 .nav__list--footer {
+    flex: 1 0 100%;
     margin: 0;
     padding: 0;
+    justify-content: flex-start;
+
 }
 
 .nav__item--footer {
@@ -433,6 +519,24 @@ img {
 
 .copyright {
     text-align: center;
+}
+
+.socialIcons {
+    position: fixed;
+    top: 40%;
+    right: 0;  
+}
+
+.icon-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.icon-container__icon {
+    color: $lightgrey;
+    font-size: 2rem;
+    width: 30px;
+    padding: 30px 0;
 }
 
 
